--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Documents - Download</title>
+    <title>Document Viewer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style>
         body {
@@ -14,7 +14,7 @@
         }
 
         .container {
-            max-width: 600px;
+            max-width: 800px;
             margin: 0 auto;
             background: #fff;
             padding: 20px;
@@ -31,16 +31,16 @@
             color: #666;
         }
 
-        ul {
+        .document-list {
             list-style: none;
             padding: 0;
         }
 
-        li {
+        .document-list li {
             margin: 15px 0;
         }
 
-        a {
+        button {
             display: flex;
             align-items: center;
             justify-content: center;
@@ -50,32 +50,59 @@
             padding: 12px 18px;
             border-radius: 5px;
             font-size: 18px;
+            border: none;
+            cursor: pointer;
             transition: background 0.3s;
             width: 100%;
             max-width: 300px;
             margin: auto;
         }
 
-        a:hover {
+        button:hover {
             background: #0056b3;
         }
 
         .icon {
             margin-right: 10px;
         }
+
+        .preview-container {
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        iframe {
+            width: 100%;
+            height: 500px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
 
     <div class="container">
-        <h1>My Documents</h1>
-        <p>Click on a document to download: <strong>Kusum Yadav</strong></p>
-        <ul>
-            <li><a href="document1.pdf" download><i class="fas fa-file-pdf icon"></i>Download PDF File</a></li>
-            <li><a href="presentation.pptx" download><i class="fas fa-file-powerpoint icon"></i>Download PowerPoint File</a></li>
-            <li><a href="report.docx" download><i class="fas fa-file-word icon"></i>Download Word File</a></li>
+        <h1>Document Viewer</h1>
+        <p>Click on a document to preview or download: <strong>Kusum Yadav</strong></p>
+        <ul class="document-list">
+            <li><button onclick="showPreview('document1.pdf')"><i class="fas fa-file-pdf icon"></i>View PDF</button></li>
+            <li><button onclick="showPreview('https://docs.google.com/gview?url=YOUR_SITE_URL/presentation.pptx&embedded=true')"><i class="fas fa-file-powerpoint icon"></i>View PowerPoint</button></li>
+            <li><button onclick="showPreview('https://docs.google.com/gview?url=YOUR_SITE_URL/report.docx&embedded=true')"><i class="fas fa-file-word icon"></i>View Word</button></li>
         </ul>
+
+        <!-- Preview Container -->
+        <div class="preview-container">
+            <iframe id="docPreview" src="" style="display: none;"></iframe>
+        </div>
     </div>
+
+    <script>
+        function showPreview(file) {
+            var iframe = document.getElementById('docPreview');
+            iframe.src = file;
+            iframe.style.display = 'block';
+        }
+    </script>
 
 </body>
 </html>
