--- a/home.html
+++ b/home.html
@@ -110,7 +110,7 @@
         const documents = [
             { name: "PDF Document 1", url: "docs/document1.pdf", type: "pdf" },
             { name: "PDF Document 2", url: "docs/document2.pdf", type: "pdf" },
-            { name: "PowerPoint Presentation 1", url: "docs/presentation1.pptx", type: "ppt" },
+            { name: "PowerPoint Presentation 1", url: "docs//Global_warming_in_india_and_water_availability[1].pptx", type: "ppt" },
             { name: "PowerPoint Presentation 2", url: "docs/presentation2.pptx", type: "ppt" },
             { name: "Word Report 1", url: "docs/report1.docx", type: "doc" },
             { name: "Word Report 2", url: "docs/report2.docx", type: "doc" }
