--- a/home.html
+++ b/home.html
@@ -4,232 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document Viewer</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f4f4f4;
-            padding: 20px;
-        }
-
-        /* Navbar styles */
-        nav {
-            background-color: #333;
-            padding: 10px;
-            text-align: center;
-        }
-
-        nav a {
-            color: white;
-            padding: 14px 20px;
-            text-decoration: none;
-            margin: 0 10px;
-            font-size: 18px;
-        }
-
-        nav a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-
-        .container {
-            margin-top: 20px;
-            background: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        h1 {
-            color: #333;
-            text-align: center;
-        }
-
-        .document-section {
-            margin-top: 20px;
-        }
-
-        .document-list {
-            list-style: none;
-            padding: 0;
-        }
-
-        .document-list li {
-            margin: 15px 0;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        button {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-decoration: none;
-            color: #fff;
-            background: #007bff;
-            padding: 12px 18px;
-            border-radius: 5px;
-            font-size: 18px;
-            border: none;
-            cursor: pointer;
-            transition: background 0.3s;
-            width: 100%;
-            max-width: 250px;
-        }
-
-        button:hover {
-            background: #0056b3;
-        }
-
-        .icon {
-            margin-right: 10px;
-        }
-
-        .download-link {
-            text-decoration: none;
-            color: #28a745;
-            font-size: 18px;
-            margin-left: 15px;
-        }
-
-        .download-link:hover {
-            color: #218838;
-        }
-
-        .preview-container {
-            margin-top: 20px;
-            text-align: center;
-        }
-
-        iframe {
-            width: 100%;
-            height: 500px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
     <!-- Navbar -->
     <nav>
-        <a href="#pdfSection">PDFs</a>
-        <a href="#pptSection">PPTs</a>
-        <a href="#docSection">Word Docs</a>
+        <a href="pdfs.html">PDF Documents</a>
+        <a href="ppts.html">PowerPoint Presentations</a>
+        <a href="docs.html">Word Documents</a>
     </nav>
 
     <div class="container">
-        <h1>Document Viewer</h1>
-        <p>Click on a document to preview or download:</p>
-
-        <!-- PDF Section -->
-        <div id="pdfSection" class="document-section">
-            <h2>PDF Documents</h2>
-            <ul id="pdfList" class="document-list"></ul>
-        </div>
-
-        <!-- PowerPoint Section -->
-        <div id="pptSection" class="document-section">
-            <h2>PowerPoint Presentations</h2>
-            <ul id="pptList" class="document-list"></ul>
-        </div>
-
-        <!-- Word Document Section -->
-        <div id="docSection" class="document-section">
-            <h2>Word Documents</h2>
-            <ul id="docList" class="document-list"></ul>
-        </div>
-
-        <!-- Preview Container -->
-        <div class="preview-container">
-            <iframe id="docPreview" src="" style="display: none;"></iframe>
-        </div>
+        <h1>Welcome to Document Viewer</h1>
+        <p>Select a document type from the menu to view or download:</p>
     </div>
-
-    <script>
-        // List of documents categorized by type
-        const documents = {
-            pdf: [
-                { name: "PDF Document 1", url: "docs/document1.pdf" },
-                { name: "PDF Document 2", url: "docs/document2.pdf" }
-            ],
-            ppt: [
-                { name: "PowerPoint Presentation 1", url: "docs/presentation1.pptx" },
-                { name: "PowerPoint Presentation 2", url: "docs/presentation2.pptx" }
-            ],
-            doc: [
-                { name: "Word Report 1", url: "docs/report1.docx" },
-                { name: "Word Report 2", url: "docs/report2.docx" }
-            ]
-        };
-
-        // Function to generate document list dynamically for each category
-        function loadDocuments() {
-            // Load PDF documents
-            const pdfList = document.getElementById("pdfList");
-            documents.pdf.forEach(doc => {
-                createDocumentItem(pdfList, doc, 'pdf');
-            });
-
-            // Load PPT documents
-            const pptList = document.getElementById("pptList");
-            documents.ppt.forEach(doc => {
-                createDocumentItem(pptList, doc, 'ppt');
-            });
-
-            // Load Word documents
-            const docList = document.getElementById("docList");
-            documents.doc.forEach(doc => {
-                createDocumentItem(docList, doc, 'doc');
-            });
-        }
-
-        // Function to create individual document list item
-        function createDocumentItem(list, doc, type) {
-            const listItem = document.createElement("li");
-
-            const button = document.createElement("button");
-            button.innerHTML = `<i class="fas ${getIcon(type)} icon"></i> ${doc.name}`;
-            button.onclick = () => showPreview(doc.url, type);
-
-            const downloadLink = document.createElement("a");
-            downloadLink.href = doc.url;
-            downloadLink.download = doc.name;
-            downloadLink.innerHTML = `<i class="fas fa-download"></i>`;
-            downloadLink.classList.add("download-link");
-            downloadLink.title = "Download";
-
-            listItem.appendChild(button);
-            listItem.appendChild(downloadLink);
-            list.appendChild(listItem);
-        }
-
-        // Function to show preview in iframe
-        function showPreview(file, type) {
-            let previewURL = file;
-            if (type === "ppt" || type === "doc") {
-                previewURL = `https://docs.google.com/gview?url=${window.location.origin}/${file}&embedded=true`;
-            }
-
-            const iframe = document.getElementById("docPreview");
-            iframe.src = previewURL;
-            iframe.style.display = "block";
-        }
-
-        // Function to get file icon based on type
-        function getIcon(type) {
-            switch (type) {
-                case "pdf": return "fa-file-pdf";
-                case "ppt": return "fa-file-powerpoint";
-                case "doc": return "fa-file-word";
-                default: return "fa-file";
-            }
-        }
-
-        // Load documents when page loads
-        window.onload = loadDocuments;
-    </script>
 
 </body>
 </html>
