--- a/pdfs.html
+++ b/pdfs.html
@@ -10,7 +10,7 @@
 
     <!-- Navbar -->
     <nav>
-        <a href="index.html">Home</a>
+        <a href="home.html">Home</a>
         <a href="ppts.html">PowerPoint Presentations</a>
         <a href="docs.html">Word Documents</a>
     </nav>
