--- a/docs.html
+++ b/docs.html
@@ -13,6 +13,7 @@
         <a href="home.html">Home</a>
         <a href="pdfs.html">PDF Documents</a>
         <a href="docs.html">Word Documents</a>
+        <a href="ppts.html">Word Documents</a>
     </nav>
 
     <div class="container">
