--- a/pdfs.html
+++ b/pdfs.html
@@ -6,71 +6,15 @@
     <title>PDF Documents</title>
     <link rel="stylesheet" href="style.css">
 </head>
-    <style>
-body {
-    font-family: Arial, sans-serif;
-    background: #f4f4f4;
-    padding: 20px;
-}
-
-nav {
-    background-color: #333;
-    padding: 10px;
-    text-align: center;
-}
-
-nav a {
-    color: white;
-    padding: 14px 20px;
-    text-decoration: none;
-    margin: 0 10px;
-    font-size: 18px;
-}
-
-nav a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-.container {
-    margin-top: 20px;
-    background: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-h1 {
-    color: #333;
-    text-align: center;
-}
-
-.document-list {
-    list-style: none;
-    padding: 0;
-}
-
-.document-list li {
-    margin: 15px 0;
-    font-size: 18px;
-}
-
-.document-list a {
-    color: #007bff;
-    text-decoration: none;
-}
-
-.document-list a:hover {
-    text-decoration: underline;
-}
-    </style>
 <body>
 
     <!-- Navbar -->
     <nav>
         <a href="home.html">Home</a>
-        <a href="ppts.html">PowerPoint Presentations</a>
+        <a href="pdfs.html">PDF Documents</a>
         <a href="docs.html">Word Documents</a>
+        <a href="ppts.html">PowerPoint Presentations
+</a>    
     </nav>
 
     <div class="container">
