--- a/ppts.html
+++ b/ppts.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 
-    <!-- Navbar -->
-    <nav>
+        <nav>
         <a href="home.html">Home</a>
         <a href="pdfs.html">PDF Documents</a>
         <a href="docs.html">Word Documents</a>
+        <a href="ppts.html">PowerPoint Presentations</a>    
     </nav>
 
     <div class="container">
