--- a/home.html
+++ b/home.html
@@ -10,9 +10,11 @@
 
     <!-- Navbar -->
     <nav>
+        <a href="home.html">Home</a>
         <a href="pdfs.html">PDF Documents</a>
-        <a href="ppts.html">PowerPoint Presentations</a>
         <a href="docs.html">Word Documents</a>
+        <a href="ppts.html">PowerPoint Presentations
+</a>    
     </nav>
 
     <div class="container">
