--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 
     <!-- Navbar -->
     <nav>
-        <a href="home.html">Home</a>
+<!--         <a href="home.html">Home</a> -->
         <a href="pdfs.html">PDF Documents</a>
         <a href="docs.html">Word Documents</a>
         <a href="ppts.html">PowerPoint Presentations
