--- a/docs.html
+++ b/docs.html
@@ -18,7 +18,7 @@
     </nav>
 
     <div class="container">
-        <h1>PowerPoint Presentations</h1>
+        <h1>Word Documents</h1>
         <ul id="pptList" class="document-list">
             <!-- PowerPoint Presentations will be dynamically loaded here -->
         </ul>
