--- a/docs.html
+++ b/docs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Word Documents</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
@@ -13,30 +13,30 @@
         <a href="home.html">Home</a>
         <a href="pdfs.html">PDF Documents</a>
         <a href="docs.html">Word Documents</a>
-        <a href="ppts.html">PowerPoint Presentations
-</a>    
+        <a href="ppts.html">PowerPoint Presentations</a>    
     </nav>
 
     <div class="container">
         <h1>Word Documents</h1>
-        <ul id="pptList" class="document-list">
-            <!-- PowerPoint Presentations will be dynamically loaded here -->
+        <ul id="docList" class="document-list">
+            <!-- Word Documents will be dynamically loaded here -->
         </ul>
     </div>
 
     <script>
-        const pptDocuments = [
-            { name: "Presentation 1", url: "docs/presentation1.pptx" },
-            { name: "Presentation 2", url: "docs/presentation2.pptx" }
+        const wordDocuments = [
+            { name: "Report 1", url: "docs/report1.docx" },
+            { name: "Report 2", url: "docs/report2.docx" }
         ];
 
-        const pptList = document.getElementById("pptList");
-        pptDocuments.forEach(doc => {
+        const docList = document.getElementById("docList");
+        wordDocuments.forEach(doc => {
             const listItem = document.createElement("li");
             listItem.innerHTML = `<a href="${doc.url}" download>${doc.name}</a>`;
-            pptList.appendChild(listItem);
+            docList.appendChild(listItem);
         });
     </script>
 
 </body>
 </html>
+
