--- a/docs.html
+++ b/docs.html
@@ -18,25 +18,67 @@
 
     <div class="container">
         <h1>Word Documents</h1>
-        <ul id="docList" class="document-list">
+        <div id="docList" class="document-list">
             <!-- Word Documents will be dynamically loaded here -->
-        </ul>
+        </div>
+    </div>
+
+    <!-- Modal for Preview -->
+    <div id="previewModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Document Preview</h2>
+            <embed id="modalContent" src="" width="100%" height="400px">
+            <br>
+            <button id="downloadBtn" class="download-btn">Download Document</button>
+        </div>
     </div>
 
     <script>
         const wordDocuments = [
-            { name: "Report 1", url: "docs/report1.docx" },
-            { name: "Report 2", url: "docs/report2.docx" }
+            { name: "Word Document 1", url: "docs/document1.docx", imgSrc: "images/word-icon.png" },
+            { name: "Word Document 2", url: "docs/document2.docx", imgSrc: "images/word-icon.png" }
         ];
 
         const docList = document.getElementById("docList");
+        const previewModal = document.getElementById("previewModal");
+        const modalContent = document.getElementById("modalContent");
+        const closeModal = document.querySelector(".close");
+        const downloadBtn = document.getElementById("downloadBtn");
+
+        // Dynamically load Word documents
         wordDocuments.forEach(doc => {
-            const listItem = document.createElement("li");
-            listItem.innerHTML = `<a href="${doc.url}" download>${doc.name}</a>`;
-            docList.appendChild(listItem);
+            const docBox = document.createElement("div");
+            docBox.classList.add("doc-box");
+            docBox.innerHTML = `
+                <img src="${doc.imgSrc}" alt="${doc.name}" class="doc-image" data-url="${doc.url}">
+                <p>${doc.name}</p>
+            `;
+            docList.appendChild(docBox);
         });
+
+        // Open Modal for Preview
+        docList.addEventListener("click", (e) => {
+            if (e.target && e.target.classList.contains("doc-image")) {
+                const documentUrl = e.target.getAttribute("data-url");
+                modalContent.src = documentUrl;
+                previewModal.style.display = "block";
+                downloadBtn.setAttribute("href", documentUrl);
+                downloadBtn.setAttribute("download", e.target.alt);
+            }
+        });
+
+        // Close Modal
+        closeModal.onclick = () => {
+            previewModal.style.display = "none";
+        };
+
+        window.onclick = (event) => {
+            if (event.target === previewModal) {
+                previewModal.style.display = "none";
+            }
+        };
     </script>
 
 </body>
 </html>
-
