--- a/ppts.html
+++ b/ppts.html
@@ -35,8 +35,8 @@
 
     <script>
         const pptDocuments = [
-            { name: "PowerPoint Document 1", url: "docs/presentation1.pptx", imgSrc: "images/ppt-icon.png" },
-            { name: "PowerPoint Document 2", url: "docs/presentation2.pptx", imgSrc: "images/ppt-icon.png" }
+            { name: "PowerPoint Document 1", url: ".docs/Global_warming_in_india_and_water_availability[1].pptx", imgSrc: "images/ppt-icon.png" },
+            { name: "PowerPoint Document 2", url: ".docs/presentation2.pptx", imgSrc: "images/ppt-icon.png" }
         ];
 
         const pptList = document.getElementById("pptList");
