--- a/ppts.html
+++ b/ppts.html
@@ -26,38 +26,34 @@
         const pptDocuments = [
             { name: "PowerPoint Document 1", url: "docs/Global_warming_in_india_and_water_availability[1].pptx", imgSrc: "images/ppt-icon.png", description: "An introduction to our company's vision and strategy." },
             { name: "PowerPoint Document 1", url: "https://docs.google.com/presentation/d/1kZzxYRQk8zf3jHlPZRPCC4mx7NEAlGmO/edit?usp=sharing&ouid=103298623976178701072&rtpof=true&sd=true", imgSrc: "images/ppt-icon.png", description: "An introduction to our company's vision and strategy." },
+                    { name: "PowerPoint Document 1", url: "https://docs.google.com/presentation/d/1kZzxYRQk8zf3jHlPZRPCC4mx7NEAlGmO/embed", imgSrc: "images/ppt-icon.png", description: "An introduction to our company's vision and strategy." },
+        { name: "PowerPoint Document 2", url: "https://docs.google.com/presentation/d/1kZzxYRQk8zf3jHlPZRPCC4mx7NEAlGmO/embed", imgSrc: "images/ppt-icon.png", description: "Detailed overview of the recent advancements in technology." }
+
         ];
 
-        const pptList = document.getElementById("pptList");
+    const pptList = document.getElementById("pptList");
 
-        // Dynamically load PowerPoint documents
-        pptDocuments.forEach(doc => {
-            const docBox = document.createElement("div");
-            docBox.classList.add("doc-box");
-            docBox.innerHTML = `
-                <img src="${doc.imgSrc}" alt="${doc.name}" class="doc-image">
-                <p>${doc.name}</p>
-                <p class="doc-description">${doc.description}</p>
-                <button class="preview-btn" data-url="${doc.url}">Preview</button>
-                <a href="${doc.url}" class="download-btn" download="${doc.name}">Download</a>
-            `;
-            pptList.appendChild(docBox);
-        });
+    // Dynamically load PowerPoint documents
+    pptDocuments.forEach(doc => {
+        const docBox = document.createElement("div");
+        docBox.classList.add("doc-box");
+        docBox.innerHTML = `
+            <img src="${doc.imgSrc}" alt="${doc.name}" class="doc-image">
+            <p>${doc.name}</p>
+            <p class="doc-description">${doc.description}</p>
+            <button class="preview-btn" data-url="${doc.url}">Preview</button>
+            <a href="${doc.url}" class="download-btn" download="${doc.name}">Download</a>
+        `;
+        pptList.appendChild(docBox);
+    });
 
-        // Preview functionality (opens the document in a new tab)
+    // Preview functionality (opens the document in a new tab)
     pptList.addEventListener("click", (e) => {
         if (e.target && e.target.classList.contains("preview-btn")) {
             const documentUrl = e.target.getAttribute("data-url");
 
-            // Using Google Docs Viewer for files that are publicly accessible
-            const googleDocsViewerUrl = `https://docs.google.com/viewer?url=${encodeURIComponent(documentUrl)}`;
-            // Alternatively, using Microsoft Office Online Viewer
-            const officeOnlineViewerUrl = `https://view.officeapps.live.com/op/view.aspx?src=${encodeURIComponent(documentUrl)}`;
-
-            // Open preview in a new tab
-            window.open(googleDocsViewerUrl, "_blank");
-            // or
-            // window.open(officeOnlineViewerUrl, "_blank");
+            // Open preview in a new tab (Google Slides Embed link)
+            window.open(documentUrl, "_blank");
         }
     });
     </script>
